parser/tests/bad/expr03.st
% operand of 'boolean' operation must have type 'bool'

const b := 1 or false
